[package]
name = "kontrast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.121"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt", branch = "main" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt", branch = "main" }
cxx-kde-frameworks = { path = "../cxx-kde-frameworks/" }
rand = "0.8.5"

[build-dependencies]
# cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt", branch = "main"}
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt", branch = "main", features = ["link_qt_object_files"]}
