[package]
name = "kontrast-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.121"
cxx-kde-frameworks = { path = "../cxx-kde-frameworks/" }
rand = "0.8.5"
zbus = { version = "4.4.0", features = ["tokio"] }
tokio = { version = "1.39.3", features = ["full"] }
futures-util = "0.3.30"
cxx-qt = "0.7.0"
cxx-qt-lib = { version = "0.7.0", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = "0.7.0"
